# foldl

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  default.nix  flake.nix  foldl.cabal  release.nix  shell.nix  stack.yaml
.github/workflows/: haskell.yml
bench/: Foldl.hs  Scanl.hs  benchmarks.hs
nix/: foldl.nix  turtle.nix
src/Control/: Foldl.hs  Scanl.hs
src/Control/Foldl/: ByteString.hs  Internal.hs  NonEmpty.hs  Optics.hs  Text.hs
src/Control/Foldl/Util/: MVector.hs  Vector.hs
test/: doctest.hs
