Name: foldl
Version: 1.0.6
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Foldl-Library/issues
Synopsis: Composable, streaming, and efficient left folds
Description: This library provides strict left folds that stream in constant
  memory, and you can combine folds using @Applicative@ style to derive new
  folds.  Derived folds still traverse the container just once and are often as
  efficient as hand-written folds.
Category: Control
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Foldl-Library

Library
    HS-Source-Dirs: src
    Build-Depends:
        base         >= 4        && < 5   ,
        bytestring   >= 0.9.2.1  && < 0.11,
        primitive                   < 0.6 ,
        text         >= 0.11.2.0 && < 1.2 ,
        transformers >= 0.2.0.0  && < 0.5 ,
        vector       >= 0.7      && < 0.11,
        containers                  < 0.6
    Exposed-Modules:
        Control.Foldl,
        Control.Foldl.ByteString,
        Control.Foldl.Text
    Other-Modules:
        Control.Foldl.Internal
    GHC-Options: -O2 -Wall
